--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -8,7 +8,11 @@
   <title>
     <%- title %>
   </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@300;400;500;600;700&family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
@@ -26,9 +30,9 @@
         </span>
       </div>
       <ul class="hidden sm:flex items-center">
-        <li><a href="#" class="mr-10 p-2 md:text-lg">首頁</a></li>
-        <li><a href="#" class="mr-10 p-2 md:text-lg">課程介紹</a></li>
-        <li><a href="#" class="flex p-2 md:text-lg"><span class="material-icons mr-1.5">account_circle</span>登入</a></li>
+        <li><a href="index.html" class="mr-10 p-2 md:text-lg">首頁</a></li>
+        <li><a href="courses.html" class="mr-10 p-2 md:text-lg">課程介紹</a></li>
+        <li><a href="#" class="flex p-2 md:text-lg"><span class="material-icons mr-1.5" data-modal-toggle="login-modal">account_circle</span>登入</a></li>
       </ul>
     </div>
   </nav>
@@ -39,11 +43,44 @@
 
   <%- contents %>
 
-    <footer class="footer py-6 text-center text-neutral-500 bg-neutral-800">
+    <footer class="footer font-mono py-6 text-center text-neutral-500 bg-neutral-800">
       Coding Home © 2022 All Rights Reserved
-    </footer>
+    </footer>    
+
+    <!-- Animation on scroll effect -->
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+
+      // You can also pass an optional settings object
+      // below listed default settings
+      AOS.init({
+        // Global settings:
+        disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+        startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+        initClassName: 'aos-init', // class applied after initialization
+        animatedClassName: 'aos-animate', // class applied on animation
+        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+        disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+        debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+        throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+        
+
+        // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+        offset: 120, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 800, // values from 0 to 3000, with step 50ms
+        easing: 'ease-out', // default easing for AOS animations
+        once: false, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+      });
+    </script>
+
 </body>
 
 </html>
